[gd_scene load_steps=6 format=3 uid="uid://cfqqpygfebesh"]

[ext_resource type="Script" path="res://Backend/Code/Menus/menu.gd" id="1_4fjy4"]
[ext_resource type="Texture2D" uid="uid://crda5u6l4fpvu" path="res://Frontend/Recourses/6017768.jpg" id="2_2ce8r"]
[ext_resource type="Texture2D" uid="uid://bndiq5ls5x6t8" path="res://Frontend/Recourses/icons8-russian-federation-96.png" id="3_wbx1y"]
[ext_resource type="Texture2D" uid="uid://b7upiojpg51a7" path="res://Frontend/Recourses/icons8-great-britain-96.png" id="4_6yv5l"]
[ext_resource type="Texture2D" uid="uid://ccpqen0in04jb" path="res://Frontend/Recourses/icons8-estonia-96.png" id="5_15d08"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4fjy4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2ce8r")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192188
anchor_top = 0.430556
anchor_right = 0.805469
anchor_bottom = 0.570833
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Encyclopedia" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Encyclopedia"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.428906
anchor_top = 0.101389
anchor_right = 0.572656
anchor_bottom = 0.170833
offset_bottom = -2.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "SEEG"
alignment = 1
flat = true
metadata/_edit_use_anchors_ = true

[node name="Russian_icon" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_bottom = 96.0
grow_horizontal = 0
texture_normal = ExtResource("3_wbx1y")
texture_pressed = ExtResource("3_wbx1y")
texture_hover = ExtResource("3_wbx1y")
texture_disabled = ExtResource("3_wbx1y")
texture_focused = ExtResource("3_wbx1y")

[node name="English_icon" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765625
anchor_right = 0.840625
anchor_bottom = 0.133333
texture_normal = ExtResource("4_6yv5l")
texture_pressed = ExtResource("4_6yv5l")
texture_hover = ExtResource("4_6yv5l")
texture_disabled = ExtResource("4_6yv5l")
texture_focused = ExtResource("4_6yv5l")
metadata/_edit_use_anchors_ = true

[node name="Estonian_icon" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.846094
anchor_right = 0.921094
anchor_bottom = 0.133333
texture_normal = ExtResource("5_15d08")
texture_pressed = ExtResource("5_15d08")
texture_hover = ExtResource("5_15d08")
texture_disabled = ExtResource("5_15d08")
texture_focused = ExtResource("5_15d08")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Encyclopedia" to="." method="_on_encyclopedia_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Russian_icon" to="." method="_on_russian_icon_pressed"]
[connection signal="pressed" from="English_icon" to="." method="_on_english_icon_pressed"]
[connection signal="pressed" from="Estonian_icon" to="." method="_on_estonian_icon_pressed"]
